--- a/build.gradle
+++ b/build.gradle
@@ -42,7 +42,8 @@ dependencies {
 	implementation 'org.apache.poi:poi:5.0.0'
 	implementation 'org.apache.poi:poi-ooxml:5.0.0'
 
-
+	// https://mvnrepository.com/artifact/org.apache.pdfbox/pdfbox
+	implementation 'org.apache.pdfbox:pdfbox:3.0.0'
 
 	testCompileOnly 'org.projectlombok:lombok'
 	testAnnotationProcessor 'org.projectlombok:lombok'
