--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,8 @@ server:
   port: 8080
 
 spring:
+  profiles:
+    default: local
   datasource:
     url: jdbc:postgresql://localhost:5432/proposal_db
     username: proposal
@@ -14,6 +16,7 @@ spring:
       max-lifetime: 30000 # maximum lifetime in milliseconds of a connection in the pool after it is closed.
       auto-commit: false #default auto-commit behavior.
   jpa:
+    defer-datasource-initialization: true
     database-platform: org.hibernate.dialect.PostgreSQLDialect
     generate-ddl: false
       #    open-in-view: false
@@ -28,5 +31,36 @@ spring:
         format_sql: true
         default_batch_fetch_size: 100 # Detail 적용 @BatchSize(size=100)
 
+  sql:
+    init:
+      mode: ALWAYS
 file:
   dir: upload
+
+---
+spring:
+  config:
+    activate:
+      on-profile: test
+
+  datasource:
+    url: jdbc:h2:mem:~/proposalTestApplication
+    username: sa
+    password:
+    driver-class-name: org.h2.Driver
+
+  sql:
+    init:
+      mode: NEVER
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
+  jpa:
+    defer-datasource-initialization: false
+    hibernate:
+      ddl-auto: create
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
